--- a/privacy/sudoku-duel-friends.html
+++ b/privacy/sudoku-duel-friends.html
@@ -1,48 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Sudoku Duel Friends Privacy Policy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sudoku Duel Friends - Privacy Policy</title>
 </head>
-<body style="max-width:800px;margin:40px auto;font-family:Arial,Helvetica,sans-serif;line-height:1.6;">
+<body style="max-width:900px;margin:40px auto;font-family:Arial,Helvetica,sans-serif;line-height:1.7;padding:0 16px;">
 
-<h1>Sudoku Duel Friends Privacy Policy</h1>
+  <h1>Sudoku Duel Friends Privacy Policy</h1>
 
-<p>
-This privacy policy applies to the mobile application
-<strong>"Sudoku Duel Friends"</strong> developed and operated by
-<strong>Taehun Kim</strong> ("Developer").
-</p>
+  <p>
+    This Privacy Policy applies to the mobile application <strong>&quot;Sudoku Duel Friends&quot;</strong>
+    developed and operated by <strong>Taehun Kim</strong> (&quot;Developer&quot;).
+  </p>
 
-<p>
-The app does not directly collect or store personal information from users.
-However, it uses third-party services to provide core functionality and advertisements.
-</p>
+  <p>
+    The app does not directly request users to manually enter personal information such as name, address,
+    or phone number. However, the app uses third-party services (e.g., Firebase and AdMob) that may
+    automatically collect certain information for functionality, analytics, stability, and advertising.
+  </p>
 
-<h2>Third-Party Services</h2>
-<ul>
-  <li>Google Firebase: authentication, cloud data storage, app stability and analytics</li>
-  <li>Google AdMob: advertising and ad performance measurement</li>
-</ul>
+  <h2>1. Information We Collect</h2>
+  <p>
+    The app itself does not directly collect personal information through custom forms.
+    However, third-party services integrated in the app may collect information such as:
+  </p>
+  <ul>
+    <li>Device information (e.g., device model, OS version)</li>
+    <li>App usage data (e.g., interactions, performance events)</li>
+    <li>Crash and diagnostics data</li>
+    <li>Advertising identifiers and ad performance data (for ads and measurement)</li>
+    <li>Push notification token (for delivering game-related notifications)</li>
+  </ul>
 
-<p>
-Through these services, certain data such as device information,
-advertising identifiers, and app usage data may be automatically collected
-and processed in accordance with Google's Privacy Policy.
-</p>
+  <h2>2. Third-Party Services</h2>
+  <p>The app uses the following third-party services:</p>
+  <ul>
+    <li><strong>Google Firebase</strong> (Authentication, Cloud data storage, Crash/Diagnostics, Analytics)</li>
+    <li><strong>Google AdMob</strong> (Advertising and ad performance measurement)</li>
+  </ul>
 
-<p>
-For more information, please refer to:
-<br>
-<a href="https://policies.google.com/privacy" target="_blank">
-https://policies.google.com/privacy
-</a>
-</p>
+  <p>
+    These services may collect and process data in accordance with their own privacy policies.
+    For more information, please refer to:
+  </p>
+  <ul>
+    <li>Google Privacy Policy: <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">https://policies.google.com/privacy</a></li>
+  </ul>
 
-<p>
-This policy is effective as of November 13, 2025.
-</p>
+  <h2>3. How We Use Information</h2>
+  <p>Information processed via third-party services may be used to:</p>
+  <ul>
+    <li>Provide core app features (e.g., login, cloud sync, multiplayer features)</li>
+    <li>Operate and improve app stability and performance (e.g., crash analysis)</li>
+    <li>Analyze usage trends to improve user experience</li>
+    <li>Display ads and measure ad performance</li>
+  </ul>
+
+  <h2>4. Data Sharing</h2>
+  <p>
+    We do not sell users’ personal information. Data may be shared with third-party service providers
+    (such as Google) solely for providing the services described above.
+  </p>
+
+  <h2>5. Data Retention</h2>
+  <p>
+    Data collected by third-party services is retained according to the policies and settings of those services.
+    The Developer does not control the retention period of data stored and processed by those providers.
+  </p>
+
+  <h2>6. Children’s Privacy</h2>
+  <p>
+    The app is not intended for children under the age of 13. We do not knowingly collect personal information
+    from children under 13. If you believe a child has provided personal information, please contact us so we can
+    take appropriate action.
+  </p>
+
+  <h2>7. Security</h2>
+  <p>
+    We take reasonable measures to protect information processed by the app and third-party services.
+    However, no method of transmission or storage is 100% secure.
+  </p>
+
+  <h2>8. Your Choices</h2>
+  <p>
+    You can stop all data collection by uninstalling the app. You may also reset your device advertising ID
+    through your device settings (availability depends on your device/OS).
+  </p>
+
+  <h2>9. Contact</h2>
+  <p>
+    If you have any questions about this Privacy Policy, please contact:
+    <br />
+    Email: <a href="mailto:fourleaves2@naver.com">fourleaves2@naver.com</a>
+  </p>
+
+  <h2>10. Changes to This Privacy Policy</h2>
+  <p>
+    We may update this Privacy Policy from time to time. When we update it, we will revise the effective date below.
+  </p>
+
+  <hr />
+
+  <p><strong>Effective Date:</strong> November 13, 2025</p>
 
 </body>
 </html>
