--- a/privacy/sudoku-duel-friends.html
+++ b/privacy/sudoku-duel-friends.html
@@ -11,7 +11,7 @@
 
   <p>
     This Privacy Policy applies to the mobile application <strong>&quot;Sudoku Duel Friends&quot;</strong>
-    developed and operated by <strong>Taehun Kim</strong> (&quot;Developer&quot;).
+    developed and operated by <strong>Sejun Studio</strong> (&quot;Developer&quot;).
   </p>
 
   <p>
