--- a/privacy/sudoku-duel-friends.html
+++ b/privacy/sudoku-duel-friends.html
@@ -45,7 +45,12 @@
     For more information, please refer to:
   </p>
   <ul>
-    <li>Google Privacy Policy: <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">https://policies.google.com/privacy</a></li>
+    <li>
+      Google Privacy Policy:
+      <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">
+        https://policies.google.com/privacy
+      </a>
+    </li>
   </ul>
 
   <h2>3. How We Use Information</h2>
@@ -88,14 +93,30 @@
     through your device settings (availability depends on your device/OS).
   </p>
 
-  <h2>9. Contact</h2>
+  <h2>9. Account and Data Deletion</h2>
   <p>
-    If you have any questions about this Privacy Policy, please contact:
+    Users may request deletion of their account and associated data at any time.
+    Account and data deletion requests can be made outside the app.
+  </p>
+  <p>
+    To request deletion, please contact us at:
+    <br />
+    Email: <a href="mailto:fourleaves2@naver.com">fourleaves2@naver.com</a>
+  </p>
+  <p>
+    Upon receiving a valid request, we will delete the user’s authentication data (if applicable)
+    and associated game data stored on our servers within a reasonable timeframe,
+    unless retention is required by law.
+  </p>
+
+  <h2>10. Contact</h2>
+  <p>
+    If you have any questions about this Privacy Policy or account deletion, please contact:
     <br />
     Email: <a href="mailto:fourleaves2@naver.com">fourleaves2@naver.com</a>
   </p>
 
-  <h2>10. Changes to This Privacy Policy</h2>
+  <h2>11. Changes to This Privacy Policy</h2>
   <p>
     We may update this Privacy Policy from time to time. When we update it, we will revise the effective date below.
   </p>
